--- a/res/layout/activity_fun.xml
+++ b/res/layout/activity_fun.xml
@@ -2,12 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    tools:context=".MainActivity" >
+    tools:context=".FunActivity" >
+
 
     <LinearLayout
         android:id="@+id/main_ikons"
@@ -19,7 +20,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/home" />
+            android:text="@string/home"
+            android:onClick="gotoHome" />
 
         <Button
             android:id="@+id/main_calender"
@@ -34,8 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/fun" 
-            android:onClick="gotoFun" />
+            android:text="@string/fun"/>
     </LinearLayout>
     
     <View 
