--- a/res/layout/activity_fun.xml
+++ b/res/layout/activity_fun.xml
@@ -2,14 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    tools:context=".MainActivity" >
+    android:orientation="vertical"
+    tools:context=".FunActivity" >
 
-   <LinearLayout
+
+    <LinearLayout
         android:id="@+id/main_ikons"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
@@ -19,34 +20,33 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/home" />
+            android:text="@string/home"
+            android:onClick="gotoHome" />
 
         <Button
             android:id="@+id/main_calender"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="gotoCalender"
-            android:text="@string/calender" />
+            android:text="@string/calender"
+            android:onClick="gotoCalender" />
 
         <Button
             android:id="@+id/main_fun"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="gotoFun"
-            android:text="@string/fun" />
+            android:text="@string/fun"/>
     </LinearLayout>
-
-    <View
+    
+    <View 
         android:layout_width="fill_parent"
         android:layout_height="2dp"
         android:background="#000000" />
 
-    <fragment
-        android:id="@+id/main_fragment"
-        android:name="dani.leahele.EkspSysApp.HomeFragment"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hello_world" />
 
 </LinearLayout>
