--- a/res/layout/activity_calender.xml
+++ b/res/layout/activity_calender.xml
@@ -43,9 +43,10 @@
         android:layout_height="2dp"
         android:background="#000000" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <fragment 
+        android:id="@+id/calender_list_fragment"
+        android:name="dani.leahele.EkspSysApp.Calender.EventListFragment"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
 </LinearLayout>
