--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,10 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
+    android:paddingBottom="2dp"
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp"
+    android:paddingTop="2dp"
+    android:background="#808000"
     tools:context=".MainActivity" >
 
    <LinearLayout
@@ -19,7 +20,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/home" />
+            android:text="@string/home"
+            android:textColor="#800080" />
 
         <Button
             android:id="@+id/main_calender"
@@ -27,7 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="gotoCalender"
-            android:text="@string/calender" />
+            android:text="@string/calender"
+            android:textColor="#800080" />
 
         <Button
             android:id="@+id/main_fun"
@@ -35,7 +38,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="gotoFun"
-            android:text="@string/fun" />
+            android:text="@string/fun"
+            android:textColor="#800080" />
     </LinearLayout>
 
     <View
