--- a/res/layout/activity_event.xml
+++ b/res/layout/activity_event.xml
@@ -89,56 +89,56 @@
             android:layout_height="2dp"
             android:background="#000000" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tilmeldte:" />
+
         <LinearLayout
             android:id="@+id/event_registered"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tilmeldte:" />
         </LinearLayout>
 
         <View
             android:layout_width="fill_parent"
             android:layout_height="2dp"
             android:background="#000000" />
-        
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Måske:" />
+
         <LinearLayout
             android:id="@+id/event_registered_maybe"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Måske:" />
         </LinearLayout>
     </LinearLayout>
-    
-    <LinearLayout 
+
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
-        
-        <Button 
+        android:layout_alignParentBottom="true" >
+
+        <Button
             android:id="@+id/event_signup"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/signup"
-            android:onClick="signup" />
-        
-        <Button 
+            android:onClick="signup"
+            android:text="@string/signup" />
+
+        <Button
             android:id="@+id/event_signup_maybe"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/signup_maybe"
-            android:onClick="signupMaybe" />
+            android:onClick="signupMaybe"
+            android:text="@string/signup_maybe" />
     </LinearLayout>
 
 </RelativeLayout>
