--- a/res/layout/activity_event.xml
+++ b/res/layout/activity_event.xml
@@ -53,7 +53,9 @@
             android:id="@+id/event_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Titel" />
+            android:text="Titel"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -84,7 +86,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tilmeldningsfrist: " />
+                android:text="Tilmeldningsfrist: "
+                android:textStyle="italic" />
             <TextView
                 android:id="@+id/event_frist"
                 android:layout_width="wrap_content"
@@ -92,10 +95,16 @@
                 android:text="" />
         </LinearLayout>
 
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="#808080" />
+        
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Information:" />
+            android:text="Information:"
+            android:textStyle="italic" />
         
         <TextView
             android:id="@+id/event_info"
@@ -111,7 +120,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tilmeldte:" />
+            android:text="Tilmeldte:"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:id="@+id/event_registered"
@@ -122,13 +132,14 @@
 
         <View
             android:layout_width="fill_parent"
-            android:layout_height="2dp"
-            android:background="#000000" />
+            android:layout_height="1dp"
+            android:background="#808080" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Måske:" />
+            android:text="Måske:"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:id="@+id/event_registered_maybe"
