--- a/res/layout/fragment_home.xml
+++ b/res/layout/fragment_home.xml
@@ -97,6 +97,17 @@
                     android:layout_alignParentRight="true"/>
 
             </RelativeLayout>
+            
+            <LinearLayout 
+                android:id="@+id/frag_home_comments" 
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                android:orientation="vertical">
+                
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
