--- a/res/layout/activity_event.xml
+++ b/res/layout/activity_event.xml
@@ -20,7 +20,6 @@
             android:layout_height="wrap_content" >
 
             <Button
-                android:id="@+id/main_home"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -28,7 +27,6 @@
                 android:text="@string/home" />
 
             <Button
-                android:id="@+id/main_calender"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -36,7 +34,6 @@
                 android:text="@string/calender" />
 
             <Button
-                android:id="@+id/main_fun"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -93,6 +90,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="" />
+        </LinearLayout>
+        
+        <LinearLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+            
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pris: "
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/event_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="" />            
         </LinearLayout>
 
         <View
