--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,5 +5,10 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    
+    <item 
+        android:id="@+id/main_menu_reset"
+        android:title="Reset"
+        android:onClick="resetUserData"/>
 
 </menu>
