--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -8,7 +8,6 @@
     
     <item 
         android:id="@+id/main_menu_reset"
-        android:title="Reset"
-        android:onClick="resetUserData"/>
+        android:title="Reset"/>
 
 </menu>
