Changed some layouts

--- a/res/layout/activity_write.xml
+++ b/res/layout/activity_write.xml
@@ -73,7 +73,7 @@
         <EditText
             android:id="@+id/write_comment"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/write_button"
             android:layout_margin="5dp" />
     </RelativeLayout>
