--- a/res/layout/single_event.xml
+++ b/res/layout/single_event.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="10dp"
-    android:paddingTop="2dp"
+    android:paddingTop="3dp"
+    android:paddingBottom="3dp"
     android:paddingRight="10dp" >
 
     <TextView
